--- a/blog/templates/blog/tag.html
+++ b/blog/templates/blog/tag.html
@@ -1,6 +1,6 @@
 {% extends 'blog/basic.html' %}
 {% block pagetitle %}
-    <title>Home</title>
+    <title>{{ tag_name }}</title>
 {% endblock %}
 {% block content %}
     {% load staticfiles %}
@@ -10,10 +10,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="site-heading">
-                        <h1>He Shi</h1>
-                        <hr class="small">
-                        <span class="subheading">Northeastern University Computer Science master candidate</span>
+                    <div class="page-heading">
+                        <h1>He Shi's Blog</h1>
+                        <span class="subheading"><span class="glyphicon glyphicon-tag"></span>{{ tag_name }}</span>
                     </div>
                 </div>
             </div>
@@ -49,7 +48,7 @@
                 <!-- Pager -->
                 <ul class="pager">
                     <li class="next">
-                        <a href={% url 'blog.views.blog' %}>Older Posts &rarr;</a>
+                        <a href={% url 'blog.views.blog' %}>More posts &rarr;</a>
                     </li>
                 </ul>
             </div>
