--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -21,40 +21,31 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-               {% for post in posts %}
-                <div class="post-preview">
-                    <a href={{ post.get_absolute_url }}>
-                        <h2 class="post-title">
-                           {{ post.title }}
-                        </h2>
-                        <h3 class="post-subtitle">
-                           {{  post.subtitle }}
-                        </h3>
-                    </a>
-                    <h4>
-                        {% for tag in post.tags.all %}
-                            <a href={{ tag.get_absolute_url }}>
-                            <span class="glyphicon glyphicon-tag"></span>{{ tag.tag }}
-                            </a>
-                        {% endfor %}
-                    </h4>
-
-                    <p class="post-meta">Posted by <a href={% url 'blog.views.about' %}> He Shi </a> on {{ post.posted }} </p>
-                </div>
-                <hr>
-                {% endfor %}
-                <!-- Pager -->
-                <ul class="pager">
-                    <li class="next">
-                        <a href={% url 'blog.views.blog' %}>Older Posts &rarr;</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
+     <div class="container">
+         <div class="row">
+             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                {% for post in post_list %}
+                 <div class="post-preview">
+                     <a href={% url 'blog.views.post' post.id %}>
+                         <h2 class="post-title">
+                            {{ post.title }}
+                         </h2>
+                         <h3 class="post-subtitle">
+                            {{  post.subtitle }}
+                         </h3>
+                     </a>
+                     <p class="post-meta">Posted by <a href={% url 'blog.views.about' %}> He Shi </a> on {{ post.posted }} </p>
+                 </div>
+                 <hr>
+                 {% endfor %}
+                 <!-- Pager -->
+                 <ul class="pager">
+                     <li class="next">
+                         <a href={% url 'blog.views.blog' %}>Older Posts &rarr;</a>
+                     </li>
+                 </ul>
+             </div>
+         </div>
+     </div>
     <hr>
 {% endblock %}
